fix validation penyewaan & pelanggan, update docs, update readme
